--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ header .lower-text .bottom{
 .banner-bg .text-1{
     font-family: 'Roboto Slab', serif;
     font-weight: lighter;
-    font-size: 40px;
+    font-size: 30pt;
     display: flex;
     justify-content: center;
     padding-top: 80px;
@@ -100,4 +100,17 @@ header .lower-text .bottom{
     display: flex;
     justify-content: center;
     color: #444444;
+}
+.banner-bg .card .card-title{
+    text-align: center;
+    font-size: 17pt;
+    font-family: 'Roboto Slab', serif;
+    font-weight: bolder;
+    margin-bottom: 10px;
+}
+.banner-bg .card .card-text{
+    font-size: 12pt;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    margin-bottom: 15px;
 }
