--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ header .lower-text .bottom{
 /* journal part star ? */
 .journal{
     width: 100%;
-    height: 1050px;
+    height: 1150px;
     background-color: #f9f9f9;
 }
 .journal .top-text{
@@ -299,4 +299,25 @@ header .lower-text .bottom{
     font-family: 'Roboto Slab', serif;
     font-weight: bold;
     font-size: 17pt;
+}
+/* contact part star here  */
+.contact{
+    width: 100%;
+    height: 380px;
+    background-color: #373737;
+    padding-top: 70px;
+    color: #f0f0f0;
+}
+.contact .heading{
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: bold;
+    font-size: 16pt;
+    text-transform: uppercase;
+    
+}
+.contact .para-1{
+    font-family: 'Roboto', sans-serif;
+    font-size: 11pt;
+    margin-top: 20px;
+    text-align: justify;
 }
