--- a/style.css
+++ b/style.css
@@ -341,9 +341,13 @@ header .lower-text .bottom{
 /* footer part start  */
 footer{
     width: 100%;
-    height: 90px;
+    
     background-color: #333333;
     color: #b3b3b3;
     display: flex;
     align-items: center;
+}
+footer p{
+    line-height: 90px;
+    margin-bottom: 0;
 }
